apps/mealie/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
