apps/mealie/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  rules:
    - host: mealie.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: mealie
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - mealie.mobrockers.com
